# blog

bazel-oso/app/: Makefile  README.md  WORKSPACE  go_deps.bzl
bazel-oso/app-patched/: BUILD.bazel  Makefile  README.md  app_test.go  go.mod  go_deps.bzl
bazel-oso/app-patched/patches/: BUILD.bazel  com_github_osohq_go_oso.patch
